--- a/src/Weather.css
+++ b/src/Weather.css
@@ -32,10 +32,10 @@
   list-style: none;
 }
 
-.Weather img {
+.Weather canvas {
   height: 64px;
-  width: 64px;
   display: inline-block;
+  margin-top: 5px;
   margin-right: 10px;
 }
 
