--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,22 +1,22 @@
 .Weather {
-  border: 1px solid #1eff00;
+  border: 1px solid darkred;
   padding: 16px;
   margin: 30px auto;
   border-radius: 11px;
   font-family: Consolas;
-  background: black;
+  background-image: linear-gradient(black, grey, lightgrey, white);
 }
 
 .w-100 {
-  border: 5px solid #1eff00;
-  color: #1eff00;
-  background: black;
+  border: 1px solid darkred;
+  color: darkred;
+  background: orange;
 }
 
 .form-control {
-  border: 5px solid #1eff00;
-  color: #1eff00;
-  background-color: black;
+  border: 5px solid darkred;
+  color: darkred;
+  background-color: orange;
 }
 
 .Weather form {
@@ -24,7 +24,7 @@
 }
 
 .Weather h1 {
-  color: #1eff00;
+  color: darkred;
   font-size: 24px;
   font-weight: 100;
   margin: 20px 0 0 0;
@@ -37,7 +37,7 @@
 }
 
 .Weather li {
-  color: #1eff00;
+  color: darkred;
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
@@ -53,14 +53,14 @@
 
 .Weather .temperature {
   font-weight: bold;
-  color: #1eff00;
+  color: darkred;
   font-size: 45px;
   line-height: 64px;
   font-weight: 400;
 }
 
 .Weather .unit {
-  color: #1eff00;
+  color: darkred;
   font-size: 16px;
   font-weight: 400;
   position: relative;
@@ -69,9 +69,9 @@
 }
 
 .Weather .unit a {
-  color: #f2a4d3;
+  color: darkred;
 }
 
 footer a {
-  color: hotpink;
+  color: darkred;
 }
